fix header alignment

--- a/public/stylesheets/aboutMe.css
+++ b/public/stylesheets/aboutMe.css
@@ -7,7 +7,7 @@
 }
 
 .content-container {
-  margin: 20px auto;
+  margin: 40px auto 20px;
   padding-left: 40px;
   padding-right: 40px;
 }
